--- a/_extensions/ADFG-presentation/ADFG-presentation.scss
+++ b/_extensions/ADFG-presentation/ADFG-presentation.scss
@@ -107,10 +107,12 @@ hr {
     .quarto-title-author-email {
       font-size: $code-block-font-size;
       font-weight: 700;
+      font-family: $font-family-sans-serif;
     }
     .quarto-title-authors {
       justify-content: left !important;
       font-family: $font-family-serif;
+      font-weight: 700;
       font-size: $presentation-font-size-root;
       .quarto-title-author {
         text-align: right;
@@ -123,6 +125,7 @@ hr {
       color: $theme-navy;
       font-family: $font-family-serif !important;
       font-style: italic;
+      font-weight: 700;
       content: "Alaska Department of Fish & Game";
   }
   .date {
@@ -173,6 +176,15 @@ hr {
 .slide-background {
   background-image: url(../../../../../SoA-background.jpg);
   background-size: cover;
+}
+
+// applies transparency to html and pdf print
+.slide-background:after {
+  content: '\A';
+  position: absolute;
+  width:100%; height:100%;
+  top:0; left:0;
+  background:rgba(255, 255, 255, 0.25);
 }
 
 // text box class
