adjust list properties

--- a/_extensions/ADFG-presentation/ADFG-presentation.scss
+++ b/_extensions/ADFG-presentation/ADFG-presentation.scss
@@ -282,3 +282,12 @@ hr {
     background-image: $icon !important;
   }
 }
+
+// adjust list properites
+ul {
+  font-size: $presentation-font-size-root*.85;
+}
+
+ul ul {
+  font-size: $presentation-font-size-root*.65;
+}
